# OpenFlipper

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COPYING  Jenkinsfile  PluginAlignMeshes.cc  PluginAlignMeshes.hh  README.TXT  Readme.md  sloc.txt
ACG/: CMakeLists.txt
CI/: .nfs000000000333185700000d42  VS2013-Qt-5.5.1-x64.bat  VS2013-intel-Qt-5.5.1-x64.bat  VS2015-Qt-5.6.0-x32.bat  VS2015-Qt-5.6.0-x64.bat  ci-cppcheck.sh  ci-doc.sh  ci-linux-build.sh  ci-linux-config.sh  ci-linux-test.sh  ci-linux.sh  ci-mac-build.sh  ci-mac-deploy.sh  ci-mac-test.sh  ci-mac.sh  ci-windows-build.bat  ci-windows-config.bat  ci-windows-deploy.bat  ci-windows-test.bat  ci-windows.bat  test-linux.sh
JI/: Build-VS2013-Qt-5.5.1-x64.bat  Build-VS2015-Qt-5.6.0-x32.bat  Build-VS2015-Qt-5.6.0-x64.bat  Configure-VS2013-Qt-5.5.1-x64.bat  Configure-VS2015-Qt-5.6.0-x32.bat  Configure-VS2015-Qt-5.6.0-x64.bat  Package-VS2013-Qt-5.5.1-x64.bat  Package-VS2015-Qt-5.6.0-x32.bat  Package-VS2015-Qt-5.6.0-x64.bat  Test-VS2013-5.5.1-x64.bat  Test-VS2015-5.6.0-x32.bat  Test-VS2015-5.6.0-x64.bat  Test-VS2015-Qt-5.6.0-x32.bat  Test-VS2015-Qt-5.6.0-x64.bat  Test.bat
Math_Tools/: Math_Tools.hh
MeshTools/: Curvature.hh  MeshFunctions.cc  MeshFunctions.hh
ObjectTypes/TetrahedralMesh/: CMakeLists.txt  PluginFunctionsTetrahedralMesh.cc  PluginFunctionsTetrahedralMesh.hh  TetrahedralMesh.hh
OpenFlipper/: OpenFlipper.cc  VERSION
OpenFlipper/cmake/: ACGCommon.cmake  ACGDoxygen.cmake  CMakeLists.txt  FindACG.cmake  FindASSIMP.cmake  FindCGAL.cmake  FindCGL.cmake  FindCLP.cmake  FindCOINUTILS.cmake  FindCoMISo.cmake  FindFLANN.cmake  FindGLUT.cmake  FindGUROBI.cmake  FindGoogleTest.cmake  FindIsoEx.cmake  FindMUMPS.cmake  FindOpenMesh.cmake  FindOpenVolumeMesh.cmake  FindPhySim.cmake  FindSPECTRA.cmake  MSVCMacros.cmake  OpenFlipper_common.cmake  common.cmake  fixbundle.cmake.win.in  package.cmake  plugin.cmake  type.cmake
Plugin-AlignMeshes/: AlignT.cc  AlignT.hh  CMakeLists.txt  PluginAlignMeshes.cc  PluginAlignMeshes.hh
Plugin-Backup/: BackupPlugin.cc  BackupPlugin.hh  GroupBackup.cc  GroupBackup.hh  GroupData.cc  GroupData.hh
Plugin-Color/: ColorOptions.cc  ColorOptions.hh  ColorPlugin.cc  ColorPlugin.hh
Plugin-Components/: CMakeLists.txt  ComponentsPlugin.cc  ComponentsPlugin.hh  ComponentsPluginT.cc  ComponentsScripting.cc
Plugin-Datacontrol/: CMakeLists.txt  ContextMenuDataControl.cc  DataControlPlugin.cc  DataControlPlugin.hh  DataControlPluginScripting.cc  DefaultObjectMarker.cc  DefaultObjectMarker.hh  Menu.cc  Menu.hh  Popup.cc  Toolbox.cc  Toolbox.hh  (+7 more)
Plugin-MeshCompare/: CMakeLists.txt  MeshComparePlugin.cc  MeshComparePlugin.hh  MeshCompareToolbarWidget.cc  MeshCompareToolbarWidget.hh  QwtFunctionPlot.cc  QwtFunctionPlot.hh
Plugin-PropertyVis/: CMakeLists.txt  MultiObjectPropertyModel.cc  MultiObjectPropertyModel.hh  ObjectListItemModel.cc  ObjectListItemModel.hh  PropertyModel.cc  PropertyModel.hh  PropertyModelFactory.cc  PropertyModelFactory.hh  PropertyNameListModel.cc  PropertyNameListModel.hh  PropertyVisPlugin.cc  PropertyVisPlugin.hh  PropertyVisPluginT.cc  PropertyVisToolbar.hh  PropertyVisualizer.cc  PropertyVisualizer.hh  SingleObjectPropertyModel.cc  SingleObjectPropertyModel.hh  Utils.cc  Utils.hh
Plugin-PropertyVis/OpenMesh/: OMPropertyModel.hh  OMPropertyModelT.cc  OMPropertyVisualizer.hh  OMPropertyVisualizerBoolean.hh  OMPropertyVisualizerBooleanT.cc  OMPropertyVisualizerDouble.hh  OMPropertyVisualizerDoubleT.cc  OMPropertyVisualizerInteger.hh  OMPropertyVisualizerIntegerT.cc  OMPropertyVisualizerSkinWeights.hh  OMPropertyVisualizerSkinWeightsT.cc  OMPropertyVisualizerT.cc  OMPropertyVisualizerVector.hh  OMPropertyVisualizerVector2.hh  OMPropertyVisualizerVector2T.cc  OMPropertyVisualizerVectorFieldDifference.hh  OMPropertyVisualizerVectorFieldDifferenceT.cc  OMPropertyVisualizerVectorT.cc
Plugin-PropertyVis/OpenVolumeMesh/: OVMPropertyModel.hh  OVMPropertyModelSubclass.cc  OVMPropertyModelSubclass.hh  OVMPropertyModelT.cc  OVMPropertyModelT.hh  OVMPropertyVisualizer.hh  OVMPropertyVisualizerBoolean.hh  OVMPropertyVisualizerBooleanT.cc  OVMPropertyVisualizerDouble.hh  OVMPropertyVisualizerDoubleT.cc  OVMPropertyVisualizerInteger.hh  OVMPropertyVisualizerIntegerT.cc  OVMPropertyVisualizerT.cc  OVMPropertyVisualizerVector.hh  OVMPropertyVisualizerVectorFieldDifference.hh  OVMPropertyVisualizerVectorFieldDifferenceT.cc  OVMPropertyVisualizerVectorT.cc
Plugin-PropertyVis/ScriptObjects/: ScriptObject.cc  ScriptObject.hh  ScriptSettings.cc  ScriptSettings.hh  ScriptSettingsBoolean.cc  ScriptSettingsBoolean.hh  ScriptSettingsDouble.cc  ScriptSettingsDouble.hh  ScriptSettingsVector.cc  ScriptSettingsVector.hh
Plugin-PropertyVis/Widgets/: BooleanWidget.hh  DoubleWidget.hh  DoubleWidget.ui  IntegerWidget.hh  LoadSaveWidget.hh  PickWidget.hh  SkinWeightsWidget.hh  VectorFieldDifferenceWidget.hh  VectorWidget.hh
Plugin-TextureControl/: CMakeLists.txt  HistogramItem.cc  HistogramItem.hh  ImageStorage.cc  ImageStorage.hh  QwtFunctionPlot.cc  QwtFunctionPlot.hh  TextureControl.cc  TextureControl.hh  TextureControl1DTextureHandlingOVMT.cc  TextureControl1DTextureHandlingT.cc  TextureControl2DTextureHandlingOVMT.cc  TextureControl2DTextureHandlingT.cc  TextureControlHistogramsT.cc  TextureData.cc  TextureData.hh  TextureMath.cc  TextureMath.hh  TextureParameters.cc  TextureParameters.hh  textureProperties.cc  textureProperties.hh
PluginCollection-FilePlugins/Plugin-FileOVM/: CMakeLists.txt  FileOpenVolumeMesh.cc  FileOpenVolumeMesh.hh  FileOpenVolumeMeshT.cc
PluginCollection-Selection/Plugin-SelectionVolumeMesh/: CMakeLists.txt  ParameterWidget.hh  ParameterWidget.ui  VolumeMeshSelectionFunctions.cc  VolumeMeshSelectionPlugin.cc  VolumeMeshSelectionPlugin.hh  VolumeMeshSelectionPluginT.cc
PluginCollection-TypePlugins/Plugin-TypeTetrahedralMesh/: CMakeLists.txt
Type-Plane/ObjectTypes/Plane/: CMakeLists.txt  Plane.hh  PlaneNode.hh  PlaneObject.cc  PlaneObject.hh  PlaneType.cc  PlaneType.hh  PlaneTypes.hh  PluginFunctionsPlane.hh  QtPlaneSelect.cc  QtPlaneSelect.hh
(+1541 files in other folders)
