find_package(OpenVolumeMesh)
if(OPENVOLUMEMESH_FOUND)
  list(APPEND ADDITIONAL_PLUGINLIB_INCS ${OPENVOLUMEMESH_INCLUDE_DIR})
  list(APPEND ADDITIONAL_PLUGINLIB_LIBS ${OPENVOLUMEMESH_LIBRARY})

  if (EXISTS ${OPENVOLUMEMESH_INCLUDE_DIR}/OpenVolumeMesh/Mesh/TetrahedralMesh.hh)
    add_definitions(-DENABLE_OPENVOLUMEMESH_SUPPORT)
    add_definitions(-DENABLE_OPENVOLUMEMESH_TETRAHEDRAL_SUPPORT)
  endif()



endif()



